client/src/features/Footer/styles.scss
@import "../../styles/variables";

.footer {
  display: flex;
  flex-direction: column;
  background-color: $datupv;
  color: #fff !important;
  text-align: center;

  & > div {
    margin: 5px 20px;
  }
}

.footer-social {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 20px;

  img {
    margin: 0 10px;
    width: 50px;
  }
}

.footer-location {
  margin: 0 20px;
}

.footer-logo {
  display: flex;
  flex-direction: row;
  justify-content: center;

  img {
    margin: auto;
    padding: 10px;
  }

  .dat {
    width: 120px;
  }

  .etsit {
    width: 150px;
  }

  .upv {
    width: 160px;
  }
}

@media screen and (min-width: 650px) {
  .footer-logo {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 100%;

    .etsit {
      width: 250px;
    }

    .upv {
      width: 260px;
    }
  }
}

